Добавлена интегрирация приложение с TXPG
