# bookstore-service/src/main/java/org/example/model/paymentCard/CardInfo.java
@@ -1,0 +1,12 @@
+package org.example.model.paymentCard;
+
+import lombok.Getter;
+import lombok.Setter;
+
+@Setter
+@Getter
+public class CardInfo {
+
+    private String expiration;
+    private String brand;
+}
