# bookstore-service/src/main/java/org/example/model/paymentMethodResponse/PaymentResponse.java
@@ -1,0 +1,10 @@
+package org.example.model.paymentMethodResponse;
+
+import lombok.Getter;
+import lombok.Setter;
+
+@Getter
+@Setter
+public class PaymentResponse {
+    private Tran tran;
+}
